@@ -3,6 +3,7 @@
 	<head>
 		<title>Debugging the new SAVi</title>
 		<style>
+			html	{font-family:sans-serif; font-size:14px; color:#444; line-height:16px;}
 			div		{padding-bottom:20px;}
 		</style>
 	</head>
@@ -44,6 +45,8 @@
 		<div><span>Result with nice numbers I</span> <a href="savi.html?aid=XM-DAC-41114-PROJECT-00097663">XM-DAC-41114-PROJECT-00097663</a></div>
 		<div><span>Result with nice numbers II</span> <a href="savi.html?aid=XM-DAC-41114-PROJECT-00118358">XM-DAC-41114-PROJECT-00118358</a></div>
 		<div><span>Result with nice numbers III</span> <a href="savi.html?aid=GB-COH-213890-82603853">GB-COH-213890-82603853</a></div>
+		<div><span>Result with nice numbers IV</span> <a href="savi.html?aid=XM-DAC-41114-PROJECT-00118358">XM-DAC-41114-PROJECT-00118358</a></div>
+		<div><span>Result with nice numbers V</span> <a href="savi.html?aid=NL-KVK-53521129-coffee">NL-KVK-53521129-coffee</a></div>
 		<div><span>Result with different numbers</span> <a href="savi.html?aid=ZA-PBO-064-502-AD1-1607">ZA-PBO-064-502-AD1-1607</a></div>
 		<div><span>Comprehensive Result World Bank</span> <a href="savi.html?aid=44000-P101745">44000-P101745</a></div>
 		<div><span>Indicator with most References</span> <a href="savi.html?aid=NL-KVK-40409352-PRJ08-251-0016">NL-KVK-40409352-PRJ08-251-0016</a></div>
@@ -59,6 +62,7 @@
 		
 		<div><span>Multiple currencies in transaction (legend should not show)</span> <a href="savi.html?aid=US-EIN-13-5660870-EN017">US-EIN-13-5660870-EN017</a></div>
 		
+		<div><span>This is a </span><a href="http://d-portal.org/q.html?&from=xson&root=/iati-activities/iati-activity&aid=US-EIN-13-5660870-EN017">new SAVi live example</a>.</div>
 		<div><span>Front graph need fixing</span> <a href="https://d-portal.org/ctrack.html?country=BE&#view=main">Belgium (BE) Portal</a></div>
 	</body>
 </html>
