@@ -1,3 +1,14 @@
+Development Portal (2020-03-26 shi)
+==============================
+New graph replacements for landing page
+Display organisation types for publisher graph
+Display country codes for recipient graph
+Display sector codes for sector graph
+Adjust colours for accessibility
+Display information text for new graphs
+Minor css changes
+
+
 Development Portal (2020-03-08 shi)
 ==============================
 Fix result title and description display
